// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterSoulBreaks renders multiple kinds of soul breaks and shows ownership 1`] = `
<div
  className="card component"
>
  <div
    className="card-body"
  >
    <table
      className="table table-sm"
    >
      <thead
        className="thead-dark"
      >
        <tr>
          <th
            colSpan={3}
          >
            Kain
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className=""
        >
          <td
            className="tier"
          >
            LBG
          </td>
          <td
            className="name"
          >
            Lightning Raiment (Kain)
          </td>
          <td
            className="effects"
          >
            instant lgt infuse 25s
          </td>
        </tr>
        <tr
          className="unowned chain"
        >
          <td
            className="tier"
          >
            C
          </td>
          <td
            className="name"
          >
            Impulse Drive
          </td>
          <td
            className="effects"
          >
            lgt chain 1.2x (max 99), phys 7.92/22 lgt jump
          </td>
        </tr>
        <tr
          className="unowned synchro"
        >
          <td
            className="tier"
          >
            SA2
          </td>
          <td
            className="name"
          >
            Cross Javelin
          </td>
          <td
            className="effects"
          >
            phys 9.0/15 lgt+dark+non jump, self dmg cap +10k 15s, 1 turn: (lgt/dark ⤇ lgt/dark infuse w/ stacking)
          </td>
        </tr>
        <tr
          className="unowned synchroCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon], w/ Lightning, Dark
          </td>
          <td
            className="command"
          >
            p3.6/4 - 7.2/8 l+d+n jump @ 0/1 Half-Dragon, self dmg cap +10k 1 turn, status lvl -1
          </td>
        </tr>
        <tr
          className="unowned synchroCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon], w/ Dragoon
          </td>
          <td
            className="command"
          >
            p2.7/3 l+d+n jump, self crit =100% 2 turns, 1.3x Dragoon dmg 2 turns, status lvl +2
          </td>
        </tr>
        <tr
          className="unowned synchro"
        >
          <td
            className="tier"
          >
            SA1
          </td>
          <td
            className="name"
          >
            Blood Dragoon
          </td>
          <td
            className="effects"
          >
            phys 9.0/15 lgt+non jump, lgt infuse 3 w/ stacking 25s, self dmg cap +10k 15s, 15s: (3 lgt ⤇ p5.28 l+n rngd overstrike Dragoon)
          </td>
        </tr>
        <tr
          className="unowned synchroCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon], w/ lgt
          </td>
          <td
            className="command"
          >
            p6.4 l+n jump overstrike, air time 2.50s
          </td>
        </tr>
        <tr
          className="unowned synchroCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon], w/ lgt
          </td>
          <td
            className="command"
          >
            p2.7/3 l+n rngd, self jump hi fastcast 2
          </td>
        </tr>
        <tr
          className="unowned awakening"
        >
          <td
            className="tier"
          >
            AA2
          </td>
          <td
            className="name"
          >
            Raging Dragoon
          </td>
          <td
            className="effects"
          >
            phys 9.0/15 lgt+dark+non jump, self dmg cap +10k 15s, 1 turn: (lgt/dark ⤇ lgt/dark infuse), 15s: Soaring Knight Mode, 15s: Awoken Dragoon Pride: Dragoon inf. hones, up to 1.3x dmg @ rank 5, 100% dualcast
          </td>
        </tr>
        <tr
          className="awakening"
        >
          <td
            className="tier"
          >
            AA1
          </td>
          <td
            className="name"
          >
            Lance of the Dragon
          </td>
          <td
            className="effects"
          >
            phys 9.0/15 lgt+non jump, lgt infuse 25s, self dmg cap +20k 15s, 15s: (3 Dragoon ⤇ p5.2 l+wi+n rngd overstrike Dragoon), 15s: Awoken Dragoon: Dragoon inf. hones, up to 1.3x dmg @ rank 5, jump instacast
          </td>
        </tr>
        <tr
          className="unowned ultra"
        >
          <td
            className="tier"
          >
            U3
          </td>
          <td
            className="name"
          >
            Surging Darkness
          </td>
          <td
            className="effects"
          >
            phys 7.1/10 lgt+dark+non jump, self jump instacast 15s, no air time 15s, 1 turn: (lgt/dark ⤇ lgt/dark infuse w/ stacking)
          </td>
        </tr>
        <tr
          className="unowned ultra"
        >
          <td
            className="tier"
          >
            BU
          </td>
          <td
            className="name"
          >
            Dragon's Wrath
          </td>
          <td
            className="effects"
          >
            phys 7.2/10 lgt jump, lgt infuse 25s, self no air time 2 turns
          </td>
        </tr>
        <tr
          className="unowned braveCommand"
        >
          <td />
          <td>
            [Dragoon], +1 on Dragoon
          </td>
          <td
            className="command"
          >
            p1.92 – 3.25 – 6.5 – 10.15 l jump, overstrike at brv.1+
          </td>
        </tr>
        <tr
          className="unowned ultra"
        >
          <td
            className="tier"
          >
            U1
          </td>
          <td
            className="name"
          >
            Luminous Dragon
          </td>
          <td
            className="effects"
          >
            phys 7.1/10 lgt+non jump, lgt infuse 25s, self jump instacast 15s, +30% ATK/DEF 25s
          </td>
        </tr>
        <tr
          className="unowned overstrike"
        >
          <td
            className="tier"
          >
            AO2
          </td>
          <td
            className="name"
          >
            Evil Tornado Dive
          </td>
          <td
            className="effects"
          >
            phys 11.0/20, then 8.0 overstrike, dark jump
          </td>
        </tr>
        <tr
          className="unowned overstrike"
        >
          <td
            className="tier"
          >
            AO1
          </td>
          <td
            className="name"
          >
            Dragoon Dive
          </td>
          <td
            className="effects"
          >
            phys 24.0/3 lgt jump overstrike
          </td>
        </tr>
        <tr
          className="unowned overstrike"
        >
          <td
            className="tier"
          >
            O
          </td>
          <td
            className="name"
          >
            Kain's Lance
          </td>
          <td
            className="effects"
          >
            phys 10.5 lgt+non jump overstrike, up to p14.5 w/ Dragoon used
          </td>
        </tr>
        <tr
          className="unowned glint"
        >
          <td
            className="tier"
          >
            G+2
          </td>
          <td
            className="name"
          >
            Primed Jump
          </td>
          <td
            className="effects"
          >
            instant dmg cap +10k 15s, 1.3x dmg vs weak 2 turns
          </td>
        </tr>
        <tr
          className="unowned glint"
        >
          <td
            className="tier"
          >
            G+1
          </td>
          <td
            className="name"
          >
            Dragon's Descent
          </td>
          <td
            className="effects"
          >
            instant no air time 15s, instacast 1
          </td>
        </tr>
        <tr
          className="unowned glint"
        >
          <td
            className="tier"
          >
            G
          </td>
          <td
            className="name"
          >
            Draconic Tempest
          </td>
          <td
            className="effects"
          >
            instant lgt infuse stacking 25s, lgt infuse 25s, self hi fastcast 2
          </td>
        </tr>
        <tr
          className="unowned burst"
        >
          <td
            className="tier"
          >
            B
          </td>
          <td
            className="name"
          >
            Dragoon's Pride
          </td>
          <td
            className="effects"
          >
            AoE phys 5.0/4 lgt+non jump, lgt infuse 25s
          </td>
        </tr>
        <tr
          className="unowned burstCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon]
          </td>
          <td
            className="command"
          >
            [p2.06/​2 l rngd, self no air time 2 turns]
          </td>
        </tr>
        <tr
          className="unowned burstCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon]
          </td>
          <td
            className="command"
          >
            [p2.06/​2 l rngd, self refill 1 abil. use]
          </td>
        </tr>
        <tr
          className="unowned super"
        >
          <td
            className="tier"
          >
            S
          </td>
          <td
            className="name"
          >
            Rising Drive
          </td>
          <td
            className="effects"
          >
            phys 7.8/4 jump, self no air time 3 turns
          </td>
        </tr>
        <tr
          className="unowned unique jp"
        >
          <td
            className="tier"
          >
            -
          </td>
          <td
            className="name"
          >
            “Unmatched Triple Assault”
          </td>
          <td
            className="effects"
          >
            phys 5.16/3, 100% Paralyze
          </td>
        </tr>
        <tr
          className="unowned unique"
        >
          <td
            className="tier"
          >
            -
          </td>
          <td
            className="name"
          >
            Gungnir
          </td>
          <td
            className="effects"
          >
            phys 5.0 jump, -50% DEF/RES 25s
          </td>
        </tr>
        <tr
          className="unowned unique"
        >
          <td
            className="tier"
          >
            -
          </td>
          <td
            className="name"
          >
            Lancet
          </td>
          <td
            className="effects"
          >
            phys 4.0, self heal 50% of dmg
          </td>
        </tr>
        <tr
          className="unowned legendMateria"
        >
          <td
            className="tier"
          >
            <span
              className="legendMateriaTier"
            >
              LMR3
            </span>
          </td>
          <td
            className="name"
          >
            Dragoon Resolute
          </td>
          <td
            className="effects"
          >
            25% dualcast Dragoon
          </td>
        </tr>
        <tr
          className="legendMateria"
        >
          <td
            className="tier"
          >
            <span
              className="legendMateriaTier"
            >
              LMR2
            </span>
          </td>
          <td
            className="name"
          >
            Weak No More
          </td>
          <td
            className="effects"
          >
            lgt infuse at battle start
          </td>
        </tr>
        <tr
          className="unowned legendMateria"
        >
          <td
            className="tier"
          >
            <span
              className="legendMateriaTier"
            >
              LMR1
            </span>
          </td>
          <td
            className="name"
          >
            Dragoon's Essence
          </td>
          <td
            className="effects"
          >
            1.25x Dragoon dmg if using a spear
          </td>
        </tr>
        <tr
          className="legendMateria"
        >
          <td
            className="tier"
          >
            <span
              className="legendMateriaTier"
            >
              LM2
            </span>
          </td>
          <td
            className="name"
          >
            Soaring Dragoon
          </td>
          <td
            className="effects"
          >
            +2% ATK (max +50%) per jump hit
          </td>
        </tr>
        <tr
          className="legendMateria"
        >
          <td
            className="tier"
          >
            <span
              className="legendMateriaTier"
            >
              LM1
            </span>
          </td>
          <td
            className="name"
          >
            Echoing Roar
          </td>
          <td
            className="effects"
          >
            1.1x lgt dmg
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`CharacterSoulBreaks renders multiple kinds of soul breaks in anonymous mode 1`] = `
<div
  className="card component"
>
  <div
    className="card-body"
  >
    <table
      className="table table-sm"
    >
      <thead
        className="thead-dark"
      >
        <tr>
          <th
            colSpan={3}
          >
            Kain
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className=""
        >
          <td
            className="tier"
          >
            LBG
          </td>
          <td
            className="name"
          >
            Lightning Raiment (Kain)
          </td>
          <td
            className="effects"
          >
            instant lgt infuse 25s
          </td>
        </tr>
        <tr
          className="chain"
        >
          <td
            className="tier"
          >
            C
          </td>
          <td
            className="name"
          >
            Impulse Drive
          </td>
          <td
            className="effects"
          >
            lgt chain 1.2x (max 99), phys 7.92/22 lgt jump
          </td>
        </tr>
        <tr
          className="synchro"
        >
          <td
            className="tier"
          >
            SA2
          </td>
          <td
            className="name"
          >
            Cross Javelin
          </td>
          <td
            className="effects"
          >
            phys 9.0/15 lgt+dark+non jump, self dmg cap +10k 15s, 1 turn: (lgt/dark ⤇ lgt/dark infuse w/ stacking)
          </td>
        </tr>
        <tr
          className="synchroCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon], w/ Lightning, Dark
          </td>
          <td
            className="command"
          >
            p3.6/4 - 7.2/8 l+d+n jump @ 0/1 Half-Dragon, self dmg cap +10k 1 turn, status lvl -1
          </td>
        </tr>
        <tr
          className="synchroCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon], w/ Dragoon
          </td>
          <td
            className="command"
          >
            p2.7/3 l+d+n jump, self crit =100% 2 turns, 1.3x Dragoon dmg 2 turns, status lvl +2
          </td>
        </tr>
        <tr
          className="synchro"
        >
          <td
            className="tier"
          >
            SA1
          </td>
          <td
            className="name"
          >
            Blood Dragoon
          </td>
          <td
            className="effects"
          >
            phys 9.0/15 lgt+non jump, lgt infuse 3 w/ stacking 25s, self dmg cap +10k 15s, 15s: (3 lgt ⤇ p5.28 l+n rngd overstrike Dragoon)
          </td>
        </tr>
        <tr
          className="synchroCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon], w/ lgt
          </td>
          <td
            className="command"
          >
            p6.4 l+n jump overstrike, air time 2.50s
          </td>
        </tr>
        <tr
          className="synchroCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon], w/ lgt
          </td>
          <td
            className="command"
          >
            p2.7/3 l+n rngd, self jump hi fastcast 2
          </td>
        </tr>
        <tr
          className="awakening"
        >
          <td
            className="tier"
          >
            AA2
          </td>
          <td
            className="name"
          >
            Raging Dragoon
          </td>
          <td
            className="effects"
          >
            phys 9.0/15 lgt+dark+non jump, self dmg cap +10k 15s, 1 turn: (lgt/dark ⤇ lgt/dark infuse), 15s: Soaring Knight Mode, 15s: Awoken Dragoon Pride: Dragoon inf. hones, up to 1.3x dmg @ rank 5, 100% dualcast
          </td>
        </tr>
        <tr
          className="awakening"
        >
          <td
            className="tier"
          >
            AA1
          </td>
          <td
            className="name"
          >
            Lance of the Dragon
          </td>
          <td
            className="effects"
          >
            phys 9.0/15 lgt+non jump, lgt infuse 25s, self dmg cap +20k 15s, 15s: (3 Dragoon ⤇ p5.2 l+wi+n rngd overstrike Dragoon), 15s: Awoken Dragoon: Dragoon inf. hones, up to 1.3x dmg @ rank 5, jump instacast
          </td>
        </tr>
        <tr
          className="ultra"
        >
          <td
            className="tier"
          >
            U3
          </td>
          <td
            className="name"
          >
            Surging Darkness
          </td>
          <td
            className="effects"
          >
            phys 7.1/10 lgt+dark+non jump, self jump instacast 15s, no air time 15s, 1 turn: (lgt/dark ⤇ lgt/dark infuse w/ stacking)
          </td>
        </tr>
        <tr
          className="ultra"
        >
          <td
            className="tier"
          >
            BU
          </td>
          <td
            className="name"
          >
            Dragon's Wrath
          </td>
          <td
            className="effects"
          >
            phys 7.2/10 lgt jump, lgt infuse 25s, self no air time 2 turns
          </td>
        </tr>
        <tr
          className="braveCommand"
        >
          <td />
          <td>
            [Dragoon], +1 on Dragoon
          </td>
          <td
            className="command"
          >
            p1.92 – 3.25 – 6.5 – 10.15 l jump, overstrike at brv.1+
          </td>
        </tr>
        <tr
          className="ultra"
        >
          <td
            className="tier"
          >
            U1
          </td>
          <td
            className="name"
          >
            Luminous Dragon
          </td>
          <td
            className="effects"
          >
            phys 7.1/10 lgt+non jump, lgt infuse 25s, self jump instacast 15s, +30% ATK/DEF 25s
          </td>
        </tr>
        <tr
          className="overstrike"
        >
          <td
            className="tier"
          >
            AO2
          </td>
          <td
            className="name"
          >
            Evil Tornado Dive
          </td>
          <td
            className="effects"
          >
            phys 11.0/20, then 8.0 overstrike, dark jump
          </td>
        </tr>
        <tr
          className="overstrike"
        >
          <td
            className="tier"
          >
            AO1
          </td>
          <td
            className="name"
          >
            Dragoon Dive
          </td>
          <td
            className="effects"
          >
            phys 24.0/3 lgt jump overstrike
          </td>
        </tr>
        <tr
          className="overstrike"
        >
          <td
            className="tier"
          >
            O
          </td>
          <td
            className="name"
          >
            Kain's Lance
          </td>
          <td
            className="effects"
          >
            phys 10.5 lgt+non jump overstrike, up to p14.5 w/ Dragoon used
          </td>
        </tr>
        <tr
          className="glint"
        >
          <td
            className="tier"
          >
            G+2
          </td>
          <td
            className="name"
          >
            Primed Jump
          </td>
          <td
            className="effects"
          >
            instant dmg cap +10k 15s, 1.3x dmg vs weak 2 turns
          </td>
        </tr>
        <tr
          className="glint"
        >
          <td
            className="tier"
          >
            G+1
          </td>
          <td
            className="name"
          >
            Dragon's Descent
          </td>
          <td
            className="effects"
          >
            instant no air time 15s, instacast 1
          </td>
        </tr>
        <tr
          className="glint"
        >
          <td
            className="tier"
          >
            G
          </td>
          <td
            className="name"
          >
            Draconic Tempest
          </td>
          <td
            className="effects"
          >
            instant lgt infuse stacking 25s, lgt infuse 25s, self hi fastcast 2
          </td>
        </tr>
        <tr
          className="burst"
        >
          <td
            className="tier"
          >
            B
          </td>
          <td
            className="name"
          >
            Dragoon's Pride
          </td>
          <td
            className="effects"
          >
            AoE phys 5.0/4 lgt+non jump, lgt infuse 25s
          </td>
        </tr>
        <tr
          className="burstCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon]
          </td>
          <td
            className="command"
          >
            [p2.06/​2 l rngd, self no air time 2 turns]
          </td>
        </tr>
        <tr
          className="burstCommand"
        >
          <td />
          <td
            className="school"
          >
            [Dragoon]
          </td>
          <td
            className="command"
          >
            [p2.06/​2 l rngd, self refill 1 abil. use]
          </td>
        </tr>
        <tr
          className="super"
        >
          <td
            className="tier"
          >
            S
          </td>
          <td
            className="name"
          >
            Rising Drive
          </td>
          <td
            className="effects"
          >
            phys 7.8/4 jump, self no air time 3 turns
          </td>
        </tr>
        <tr
          className="unique jp"
        >
          <td
            className="tier"
          >
            -
          </td>
          <td
            className="name"
          >
            “Unmatched Triple Assault”
          </td>
          <td
            className="effects"
          >
            phys 5.16/3, 100% Paralyze
          </td>
        </tr>
        <tr
          className="unique"
        >
          <td
            className="tier"
          >
            -
          </td>
          <td
            className="name"
          >
            Gungnir
          </td>
          <td
            className="effects"
          >
            phys 5.0 jump, -50% DEF/RES 25s
          </td>
        </tr>
        <tr
          className="unique"
        >
          <td
            className="tier"
          >
            -
          </td>
          <td
            className="name"
          >
            Lancet
          </td>
          <td
            className="effects"
          >
            phys 4.0, self heal 50% of dmg
          </td>
        </tr>
        <tr
          className="legendMateria"
        >
          <td
            className="tier"
          >
            <span
              className="legendMateriaTier"
            >
              LMR3
            </span>
          </td>
          <td
            className="name"
          >
            Dragoon Resolute
          </td>
          <td
            className="effects"
          >
            25% dualcast Dragoon
          </td>
        </tr>
        <tr
          className="legendMateria"
        >
          <td
            className="tier"
          >
            <span
              className="legendMateriaTier"
            >
              LMR2
            </span>
          </td>
          <td
            className="name"
          >
            Weak No More
          </td>
          <td
            className="effects"
          >
            lgt infuse at battle start
          </td>
        </tr>
        <tr
          className="legendMateria"
        >
          <td
            className="tier"
          >
            <span
              className="legendMateriaTier"
            >
              LMR1
            </span>
          </td>
          <td
            className="name"
          >
            Dragoon's Essence
          </td>
          <td
            className="effects"
          >
            1.25x Dragoon dmg if using a spear
          </td>
        </tr>
        <tr
          className="legendMateria"
        >
          <td
            className="tier"
          >
            <span
              className="legendMateriaTier"
            >
              LM2
            </span>
          </td>
          <td
            className="name"
          >
            Soaring Dragoon
          </td>
          <td
            className="effects"
          >
            +2% ATK (max +50%) per jump hit
          </td>
        </tr>
        <tr
          className="legendMateria"
        >
          <td
            className="tier"
          >
            <span
              className="legendMateriaTier"
            >
              LM1
            </span>
          </td>
          <td
            className="name"
          >
            Echoing Roar
          </td>
          <td
            className="effects"
          >
            1.1x lgt dmg
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
